# rcr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.devcontainer/: Dockerfile
.github/workflows/: new-release.yml  release.yml
src/: check.rs  common.rs  dat_ops.rs  dat_to_db.rs  db.rs  extensions.rs  file_ops.rs  hash.rs  main.rs  zip_file.rs
