[package]
name = "rcr"
version = "0.1.7"
edition = "2021"
description = "A file checking tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Changes synced to lockfile via `cargo upgrade` (via cargo-edit)
[dependencies]
anyhow = "1.0.75" 
base16ct = { version = "0.2.0", features = ["alloc"] }
camino = "1.1.6"
clap = { version = "4.4.7", features = ["derive", "env"] }
digest = "0.10.7"
dotenvy = "0.15.7"
log = "0.4.20"
md-5 = "0.10.6"
rayon = "1.8.0"
roxmltree = "0.18.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
simple_logger = { version = "4.2.0", features = ["colors", "stderr"] }
wild = "2.2.0"
zip = "0.6.6"

[profile.release]
# debug = true # disable, use for profiling only, bloats result
strip = "debuginfo" # strip any debug information from binary, but not symbols
opt-level = "z" # optimize for size, actually faster in this case
lto = true # link time optimization for smaller faster code across compilation units

