[package]
name = "rcr"
version = "0.2.0"
edition = "2021"
description = "A file checking tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Changes synced to lockfile via `cargo upgrade` (via cargo-edit)
[dependencies]
anyhow = "1.0.100"
base16ct = { version = "1.0.0", features = ["alloc"] }
camino = "1.2.2"
clap = { version = "4.5.54", features = ["derive", "env"] }
digest = "0.10.7"
dotenvy = "0.15.7"
log = "0.4.29"
md-5 = "0.10.6"
memmap2 = { version = "0.9.9", optional = true }
rayon = "1.11.0"
roxmltree = "0.21.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
simple_logger = { version = "5.1.0", features = ["colors", "stderr"] }
wild = "2.2.1"
zip = "7.1.0"

[profile.release]
# debug = true # disable, use for profiling only, bloats result
strip = "debuginfo" # strip any debug information from binary, but not symbols
opt-level = "z" # optimize for size, actually faster in this case
lto = true # link time optimization for smaller faster code across compilation units

[features]
memmap2 = ["dep:memmap2"]

